--- a/Notebooks/HypothesisTesting.ipynb
+++ b/Notebooks/HypothesisTesting.ipynb
@@ -301,20 +301,44 @@
     "\n",
     "We want to see if the average hit points for steel type pokemon is different than the average hit points for ice types.\n",
     "\n",
-    "What is our null and alternative hypothesis? What type of test should we use?"
+    "What is our null and alternative hypothesis? What type of test should we use?\n",
+    "\n",
+    "H0 -> There is no difference\n",
+    "H1 -> There is a difference\n",
+    "\n",
+    "Perform a test to see if we can reject the null hypothesis\n",
+    "\n",
+    "two sample test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-1.2927172913456269, pvalue=0.20217134735512723)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from scipy import stats\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv(\"Datasets/pokemon.csv\")"
+    "df = pd.read_csv(\"Datasets/pokemon.csv\")\n",
+    "steel = df[df[\"Type 1\"] == \"Steel\"][\"HP\"]\n",
+    "ice = df[df[\"Type 1\"] == \"Ice\"][\"HP\"]\n",
+    "result = stats.ttest_ind(steel, ice)\n",
+    "result\n",
+    "alpha = 0.05\n",
+    "#check if p < 0.05"
    ]
   },
   {
@@ -325,7 +349,7 @@
     "\n",
     "![formula for one sample z test](./Images/ztest.png)\n",
     "\n",
-    "The z test is often more accurate than the t test when the sample size is large and the population variance is known. Z tests follow the same type patterns of t tests but in practice two sample t test are not often used because the population variances are not known and the assumption is that they are equal."
+    "The z test is often more accurate than the t test when the sample size is large and the population variance is known. Z tests follow the same type patterns of t tests but in practice two sample z tests are not often used because the population variances are not known and the assumption is that they are equal."
    ]
   },
   {
